<resources>
    <!-- Name of the app. -->
    <string name="app_name">Inventory Insight</string>

    <!-- Home bottom navigation bar. -->
    <string name="menu_add">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>

    <!-- Screen titles -->
    <string name="home_screen_text">Recents</string>
    <string name="add_screen_name">Add item(s)</string>
    <string name="add_screen_manual">Add new item</string>
    <string name="add_screen_auto">Add item quantity</string>
    <string name="remove_screen_auto">Remove item quantity</string>
    <string name="remove_screen_name">Remove item(s)</string>
    <string name="search_item_name">Search (Auto)</string>
    <string name="search_item_manual">Search (Manual)</string>
    <string name="settings_screen_name">Settings</string>

    <!-- Text field hints. -->
    <string name="barcode_hint">Barcode</string>
    <string name="name_hint">Item Name</string>
    <string name="description_hint">Item Description</string>
    <string name="quantity_hint">Quantity</string>
    <string name="location_hint">Location</string>

    <!-- Autofill field hints. -->
    <string name="barcode_autofill">123412341234</string>
    <string name="name_autofill">Beef Jerky</string>
    <string name="quantity_autofill">100</string>
    <string name="location_autofill">Basement Pantry</string>

    <!-- Settings -->
    <string name="change_color">Change Color</string>
    <string name="logout_setting">Logout</string>

    <!-- Icon labels. -->
    <string name="barcode_icon_label">Barcode</string>

    <!-- Buttons -->
    <string name="confirm_text">Confirm</string>
    <string name="fill_text">Fill</string>

    <!-- Scroll View -->
    <string name="upc_scroll">UPC: </string>

    <!-- Login Screen -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="show_hide">Show and hide password</string>

    <!-- RegisterActivity -->
    <string name="register_title">Register</string>
    <string name="submit">Submit</string>

    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="camera_activity_name">CameraActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>