<?xml version="1.0" encoding="utf-8"?>
<!-- Constraints for text fields and button -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_field_entries"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/add_screen_name"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <!-- TODO: Scale the drawableEnd image
        android:drawableEnd="@drawable/barcode_scan_recolor"
        android:drawablePadding="5dp"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/upc_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_title_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="number"
        android:maxLength="13"

        android:hint="@string/barcode_hint"
        android:autofillHints="@string/barcode_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/item_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upc_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="textPersonName"

        android:hint="@string/name_hint"
        android:autofillHints="@string/name_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/quantity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/item_name_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="number"

        android:hint="@string/quantity_hint"
        android:autofillHints="@string/quantity_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <!-- TODO: Make this a dropdown field -->
    <Spinner
        android:id="@+id/location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/quantity_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:hint="@string/location_hint"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:height="75dp"
        android:textSize="25sp"
        android:text="@string/confirm_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@+id/location_field"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>