<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/add_screen_name"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/upc_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_title_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="number"
        android:maxLength="12"

        android:hint="@string/barcode_hint"
        android:autofillHints="@string/barcode_autofill"

        android:drawableEnd="@drawable/barcode_scan_icon"
        android:drawablePadding="5dp"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/item_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upc_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="textPersonName"

        android:hint="@string/name_hint"
        android:autofillHints="@string/name_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/quantity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/item_name_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="number"

        android:hint="@string/quantity_hint"
        android:autofillHints="@string/quantity_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <!-- TODO: Make this a dropdown field -->
    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/quantity_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:hint="@string/location_hint"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:height="60dp"
        android:text="@string/add_item_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>