<?xml version="1.0" encoding="utf-8"?>
<!-- Constraints for text fields and button -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_field_entries"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/remove_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/remove_screen_name"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <!-- TODO: Scale the drawableEnd image
        android:drawableEnd="@drawable/barcode_scan_recolor"
        android:drawablePadding="5dp"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/upc_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/remove_screen_title_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:ems="10"

        android:inputType="number"
        android:maxLength="13"

        android:hint="@string/barcode_hint"
        android:autofillHints="@string/barcode_autofill"

        android:textColorHint="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/scan_image_button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/barcode_scan_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_screen_title_text"
        app:layout_constraintBottom_toBottomOf="@+id/upc_field"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fill_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:height="75dp"
        android:textSize="25sp"
        android:text="@string/fill_text" />

</androidx.constraintlayout.widget.ConstraintLayout>