<?xml version="1.0" encoding="utf-8"?>
<!-- Constraints for text fields and button -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_field_entries"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_screen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/settings_screen_name"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/color_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_screen_text"
        app:layout_constraintLeft_toLeftOf="parent"

        app:switchPadding="10dp"
        app:switchMinWidth="56dp"

        android:text="@string/change_color"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:height="75dp"
        android:textSize="25sp"
        android:text="@string/logout_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>